kubernetes/apps/monitoring/vm/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm
spec:
  hostnames: ["vmetrics.jonandlinz.io"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/targets"
      backendRefs:
        - name: vmagent-stack
          namespace: &ns monitoring
          port: 8429
    # - matches:
    #   - path:
    #       type: RegularExpression
    #       value: "^/path/.*$"
    #   backendRefs:
    #     - name: vmalert-stack
    #       namespace: *ns
    #       port: 8080
    - backendRefs:
        - name: vmsingle-stack
          namespace: *ns
          port: 8429
